notification and spacing bugs

--- a/src/app/components/faq-list-popup/faq-list-popup.component.scss
+++ b/src/app/components/faq-list-popup/faq-list-popup.component.scss
@@ -97,7 +97,7 @@
 }
 
 .question-submit {
-    position: fixed;
+    position: absolute;
     bottom: 0px;
     box-shadow: 0px -3px 6px #00000029;
     background-color: var(--white);
